--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "hardhat": "^2.22.17"
   },
   "dependencies": {
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.9",
     "@openzeppelin/contracts": "^5.1.0",
+    "ethers": "^6.13.5",
     "viem": "^2.22.3"
   }
 }
